2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	* Makefile (conftest.o): revert change that took CFLAGS from
	this target.

2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	* configure: Don't rely on higher precision arithmetic from the build
	machine's shell. POSIX requires shell arithmetic to be only signed
	long. We can't compute the INT_PTR_MAX constant in the shell, but
	rather generate a constant C expression to compute it.

2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	Reporting of compile errors during configuration for easier
	configure debugging.

	* Makefile (conftest): Pass all of the CFLAGS when building
	conftest. This way bad compiler options are caught
	right in the basic compiler sanity test.

	* configure: Compiler jobs are redirected to temporary error
	file conftest.err which is dumped if there is a failure.
	Parting text is improved: the user should not blindly
	trust the success of the configuration but check its sanity.

2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	* configure: Bugfix in parsing configuration variables
	which contain the = character.

	* Makefile (conftest.o): Pass full CFLAGS to configuration test
	builds. If some flags don't work with the compiler, this should
	be caught.

2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	* Makefile (CFLAGS): Added -I. so current directory is first
	in the include search path. This is needed for finding
	generated header files, when building in a separate directory.

2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.c (chk_malloc, chk_realloc): Fix diagnosable conversion,
	caught by gcc 4.1.1.

2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	* configure (cross): Print out value of $cross in --help.

	* depend.txr: Add "config.h" to list of headers that are not
	prefixed with $(top_srcdir).

	* dep.mk: Regenerated.

2009-11-23  Kaz Kylheku  <kkylheku@gmail.com>

	Improving portability. It is no longer assumed that pointers
	can be converted to a type long and vice versa. The configure